--- a/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
+++ b/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
@@ -9,9 +9,9 @@
 		</div>
 	
 	   <div class="cbi-value">
-			<label class="cbi-value-title">KoolProxyR plus+ 交流群</label>
+			<label class="cbi-value-title">koolproxyR使用说明</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-reload" value="点击前往" onclick="javascript:window.open('https://t.me/joinchat/IBxysRUIgFq7pujqqZLc6Q','target');" />
+				<input type="button" class="cbi-button cbi-input-reload" value="点击前往" onclick="javascript:window.open('https://shaoxia.xyz/post/koolproxyr%E6%8C%87%E5%8D%97/','target');" />
 			</div>
 		</div>
 	
