--- a/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
+++ b/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
@@ -2,9 +2,20 @@
 </style>
 
             <div class="cbi-value">
-			<label class="cbi-value-title">koolproxyR 交流群</label>
+			<label class="cbi-value-title">KoolProxy滤广告使用须知：</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-reload" value="点击前往" onclick="javascript:window.open('https://t.me/koolproxyR','target');" />
+		<br />
+		1. Adblock Plus 的 Host 列表 + KoolProxy 黑名单模式运行更流畅上网体验，开启全局模式获取更好的过滤效果。
+		<br />
+		2. 过滤HTTPS广告需要为相应客户端安装证书，在“控制控制”里添加客户端ip或者mac地址，并选择用<u><font color='#66FF00'>HTTP + HTTPS</font></u>过滤！
+		<br />                    
+		3. 在路由器下的设备，在浏览器中输入<u><font color='#66FF00'>110.110.110.110</font></u>来下载证书，导入证书目录请选择“受信任的根证书颁发机构”。
+		<br />
+        	4. 安装完证书后，请清除浏览器、视频APP的缓存并重启，如果访问网页弹出不安全提示，请检查证书是否安装正确。
+        	<br />
+		5. 如果想在多台路由器上使用一个证书，请先备份证书，然后再在另一个路由器上恢复证书即可。
+        	<br />
+			<input type="button" class="cbi-button cbi-input-reload" value="LedeProxy滤广告的规则项目地址，欢迎大家使用！" onclick="javascript:window.open('https://gitee.com/ledewrt/ledeproxy','target');" /> 
 			</div>
 		</div>
 	
