--- a/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
+++ b/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
@@ -1,11 +1,12 @@
 
 </style>
-
             <div class="cbi-value">
-			<label class="cbi-value-title">KoolProxy滤广告使用须知：</label>
+			<label class="cbi-value-title">KoolProxy使用小Tips：</label>
 			<div class="cbi-value-field">
 		<br />
-		1. Adblock Plus 的 Host 列表 + KoolProxy 黑名单模式运行更流畅上网体验，开启全局模式获取更好的过滤效果。
+		1. 推荐配置：过滤模式（全局模式）+默认访问控制（https过滤）。要过滤视频，必须选中规则中的视频规则。
+		<br />
+		2. Adblock Plus的Host列表 + KoolProxy黑名单模式运行更流畅上网体验。
 		<br />
 		2. 过滤HTTPS广告需要为相应客户端安装证书，在“控制控制”里添加客户端ip或者mac地址，并选择用<u><font color='#66FF00'>HTTP + HTTPS</font></u>过滤！
 		<br />                    
@@ -15,12 +16,10 @@
         	<br />
 		5. 如果想在多台路由器上使用一个证书，请先备份证书，然后再在另一个路由器上恢复证书即可。
         	<br />
-			<input type="button" class="cbi-button cbi-input-reload" value="LedeProxy滤广告的规则项目地址，欢迎大家使用！" onclick="javascript:window.open('https://gitee.com/ledewrt/ledeproxy','target');" /> 
-			</div>
 		</div>
 	
 	   <div class="cbi-value">
-			<label class="cbi-value-title">koolproxyR使用说明</label>
+			<label class="cbi-value-title">koolproxyR更为详细的使用说明</label>
 			<div class="cbi-value-field">
 				<input type="button" class="cbi-button cbi-input-reload" value="点击前往" onclick="javascript:window.open('https://shaoxia.xyz/post/koolproxyr%E6%8C%87%E5%8D%97/','target');" />
 			</div>
