--- a/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
+++ b/files/usr/lib/lua/luci/view/koolproxy/feedback.htm
@@ -4,17 +4,19 @@
 			<label class="cbi-value-title">KoolProxy使用小Tips：</label>
 			<div class="cbi-value-field">
 		<br />
-		1. 推荐配置：过滤模式（全局模式）+默认访问控制（https过滤）。要过滤视频，必须选中规则中的视频规则。
+		1、 推荐配置：过滤模式（全局模式）+ 默认访问控制（https过滤）达到最佳的过滤效果。
 		<br />
-		2. Adblock Plus的Host列表 + KoolProxy黑名单模式运行更流畅上网体验。
+		2、 Adblock Plus的Host列表 + KoolProxy黑名单模式运行更流畅上网体验。
 		<br />
-		2. 过滤HTTPS广告需要为相应客户端安装证书，在“控制控制”里添加客户端ip或者mac地址，并选择用<u><font color='#66FF00'>HTTP + HTTPS</font></u>过滤！
+		3、 要过滤视频广告，必须选中规则中的视频规则。因为其他规则里面已经剔除了视频的网站。
+		<br />
+		4、 过滤HTTPS广告需要为相应客户端安装证书，在“控制控制”里添加客户端ip或者mac地址，并选择用<u><font color='#66FF00'>HTTP + HTTPS</font></u>过滤！
 		<br />                    
-		3. 在路由器下的设备，在浏览器中输入<u><font color='#66FF00'>110.110.110.110</font></u>来下载证书，导入证书目录请选择“受信任的根证书颁发机构”。
+		5、 在路由器下的设备，在浏览器中输入<u><font color='#66FF00'>110.110.110.110</font></u>来下载证书，导入证书目录请选择“受信任的根证书颁发机构”。
 		<br />
-        	4. 安装完证书后，请清除浏览器、视频APP的缓存并重启，如果访问网页弹出不安全提示，请检查证书是否安装正确。
+        	6、 安装完证书后，请清除浏览器、视频APP的缓存并重启，如果访问网页弹出不安全提示，请检查证书是否安装正确。
         	<br />
-		5. 如果想在多台路由器上使用一个证书，请先备份证书，然后再在另一个路由器上恢复证书即可。
+		7、 如果想在多台路由器上使用一个证书，请先备份证书，然后再在另一个路由器上恢复证书即可。
         	<br />
 		</div>
 	
@@ -23,9 +25,7 @@
 			<div class="cbi-value-field">
 				<input type="button" class="cbi-button cbi-input-reload" value="点击前往" onclick="javascript:window.open('https://shaoxia.xyz/post/koolproxyr%E6%8C%87%E5%8D%97/','target');" />
 			</div>
-		</div>
-	
-                         
-		
+		</div>	
+                        	
 	</fieldset>
 </fieldset>
